<?xml version="1.0"?>
<package>
  <name>iiwa_ros</name>
  <version>1.4.0</version>
  <description>The iiwa_ros package</description>
  <author email="salvo.virga@tum.de">Salvo Virga</author>
  <maintainer email="salvo.virga@tum.de">Salvo Virga</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iiwa_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>iiwa_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>realtime_utilities</build_depend>
  <run_depend>realtime_utilities</run_depend>
  
</package>